# masive-validator-RUC-SUNAT

./: .gitignore  main.py  pyproject.toml  readme.md
benchmarks/: dataset_generator.py
src/massruc/: main.py  testing.py  txt_to_db.py
tests/: test_ruc_verificator.py
utils/: ruc_digit_checker.py  ruc_utilities.py  testing.py  txt_to_db.py
